# bas-ui

./: .gitignore  Makefile  README.md  meson.build
app/: assets.cpp  notepad.1  notepad.cpp
debian/: bas-ui.install  changelog  control  copyright  libbas-ui-dev.install  libbas-ui1.install  rules
debian/source/: format
po/: POTFILES  bas-ui.pot  en.po  ja.po  ko.po  meson.build  zh_CN.po  zh_TW.po
src/: Makefile  assets.s  module.cpp  wx_pch.h
src/bas/proc/: MyStackWalker.hpp
src/bas/ui/arch/: BuildViewLog.hpp  CreateViewContext.cpp  CreateViewContext.hpp  EditHistory.hpp  ImageSet.cpp  UIAction.hpp  UIElement.cpp  UIElement.hpp  UIFragment.cpp  UIFragment.hpp  UIGroup-build.cpp  UIGroup-remove.cpp  UIGroup.cpp  UIGroup.hpp  UIState.hpp
src/bas/util/: vectors.hpp
src/bas/wx/: app.cpp  app.hpp  artprovs.cpp  i18n.cpp  i18n.hpp  images.cpp  menus.cpp  toolbars.hpp  uiframe.cpp  uiframe.hpp
src/proc/: MyStackWalker.hpp  wx_assets.cpp  wx_assets.hpp
src/ui/arch/: BuildViewContext.cpp  BuildViewContext.hpp  BuildViewLog.cpp  BuildViewLog.hpp  CreateViewContext.cpp  CreateViewContext.hpp  EditHistory.cpp  ImageSet.cpp  ImageSet.hpp  UIAction.cpp  UIAction.hpp  UIElement.cpp  UIElement.hpp  UIFragment.cpp  UIFragment.hpp  UIGroup-build.cpp  UIGroup-remove.cpp  UIGroup.cpp  UIGroup.hpp  UIState.cpp  UIState.hpp  UIWidgetsContext.cpp  UIWidgetsContext.hpp
src/util/: mem.cpp  mem.hpp  vectors.hpp
src/wx/: app.cpp  app.hpp  appframe.cpp  appframe.hpp  artprovs.cpp  artprovs.hpp  images.cpp  images.hpp  menus.cpp  menus.hpp  str.hpp  toolbars.cpp  toolbars.hpp  uiframe.cpp  uiframe.hpp
